--- a/_pages/team.html
+++ b/_pages/team.html
@@ -74,21 +74,20 @@ Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hl
 
 <ul>	
 	<li><strong>  Jing Zhang </strong> 2023.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  	  </li>
-	<li><strong>  Soojeong Kim</strong>  2023.09 – Present<br>	  </li>	
 	<li><strong>  Patrick Dann </strong> 2024.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  	 
 	Award 1: (2024.10-2025.03) BioTalent Science Horizons Youth Intership Program <br>
 	</li>
 	<li><strong>  JingYu Xu </strong> 2024.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  	
 	Award 1: (2024.09) UVic Facuty of Graduate Studies Entrance Scholarship <br>
 	</li>	
-
+	<li><strong>  Jason Thomo </strong>, 2025.05 – Present (Co-supervisor) <br>  </li> 	
 </ul>
 
 
 <h4>Staff/Programmer</h4>
 
 <ul>
-  <li><strong> Shelly Gao </strong> 2022.06 – current <br>
+  <li><strong> Shelly Gao </strong> 2022.06 – 2025.12 <br>
 </ul>
 
   <!--
@@ -111,7 +110,6 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 <h4>Undergraduate Students</h4> 
 <ul> 
 <li><strong>  Bryce Davidson (UVic) </strong>, 2024.05 – current <br>  Full-time intern </li> 
-<li><strong>  Jason Thomo (UVic) </strong>, 2024.05 – current <br>  Research Assistant </li> 	
 </ul>
 	
 <h3><strong>Alumni</strong><br></h3>
@@ -144,6 +142,8 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	
 <h4>Master Students</h4>
 <ul>
+	<li><strong>  Soojeong Kim</strong>  2023.09 – 2025.08 <br>	  </li>	
+	
 	<li><strong>  Shuyi Long</strong>  2022.09 – 2025.06<br>	  
 	First job: Founder / Entrepreneur (Self-Employed Business Owner)
 	</li>
@@ -264,6 +264,8 @@ Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
 
 	<h4>Undergraduate Students</h4>
 <ul>
+<li><strong>  Jason Thomo (UVic) </strong>, 2024.05 – 2025.04 <br>  Research Assistant </li> 	
+
 <li><strong>  Andy Chen (University of British Columbia) </strong>, 2024.06 – 2024.8<br> Summer research intern  </li> 		
 
 <li><strong>  Houshi He </strong>, 2023.08 – 2023.10<br>   
