--- a/_pages/research.html
+++ b/_pages/research.html
@@ -43,10 +43,12 @@ Trainees are underlined, and the last/corresponding authors are denoted by *. Th
 
 <h3> Design of adaptive clinical trials </h3> 
 <ol>
-<li>	Chen C, Sun L, <b>Zhang X</b>.  A promising biomarker adaptive Phase 2/3 design – explained and expanded. 2023, <em>Contemporary Clinical Trials Communications</em>  <a href="https://doi.org/10.1016/j.conctc.2023.101229"> Link to Paper </a> </li> 
-<li>	Chen C and <b>Zhang X</b>. From bench to bedside, 2-in-1 design expedites phase 2/3 oncology drug development. 2023, <em>Frontiers in Oncology</em>,  <a href="https://doi.org/10.3389/fonc.2023.1251672"> Link to Paper </a> </li> 
-<li>	<b>Zhang X</b>, <u>Jia H</u>, Xing L, and Chen C. Application of group sequential methods to the 2-in-1 design and its extensions for interim monitoring. 2023, <em>Statistics in Biopharmaceutical Research</em>,  <a href="https://www.tandfonline.com/eprint/MBTZAZGJUFAHDMW3M7RV/full?target=10.1080/19466315.2023.2197402"> Link to Paper </a> </li>
-<li>    <u>Lu Y</u>, Zhou J, Xing L, <b>Zhang X</b>*. The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. 2021， <em> Statistics in Medicine</em>  <a href="https://doi.org/10.1002/sim.8868"> Link to Paper </a> and 
+	<li>	Cong Chen, Mo Huang, <b>Xuekui Zhang</b>. Adaptive Phase 2/3 Design with Dose Optimization. 2025 <em>Contemporary Clinical Trials </em> (Accepted) </li> 
+	<li>	Cong Chen, Mo Huang, <b>Xuekui Zhang</b>*. Adjustment for Inconsistency in Adaptive Phase 2/3 Designs with Dose Optimization. 2025 <em>Pharmaceutical Statistics </em> (Accepted) </li> 
+	<li>	Cong Chen, Linda Sun, <b>Xuekui Zhang</b>.  A promising biomarker adaptive Phase 2/3 design – explained and expanded. 2023, <em>Contemporary Clinical Trials Communications</em>  <a href="https://doi.org/10.1016/j.conctc.2023.101229"> Link to Paper </a> </li> 
+<li>	Cong Chen, and <b>Xuekui Zhang</b>. From bench to bedside, 2-in-1 design expedites phase 2/3 oncology drug development. 2023, <em>Frontiers in Oncology</em>,  <a href="https://doi.org/10.3389/fonc.2023.1251672"> Link to Paper </a> </li> 
+<li>	<b>Xuekui Zhang</b>, <u>Haijun Jia</u>, Li Xing, and Cong Chen. Application of group sequential methods to the 2-in-1 design and its extensions for interim monitoring. 2023, <em>Statistics in Biopharmaceutical Research</em>,  <a href="https://www.tandfonline.com/eprint/MBTZAZGJUFAHDMW3M7RV/full?target=10.1080/19466315.2023.2197402"> Link to Paper </a> </li>
+<li>    <u>Yitao Lu</u>, Julie Zhou, Li Xing, <b>Xuekui Zhang</b>*. The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. 2021， <em> Statistics in Medicine</em>  <a href="https://doi.org/10.1002/sim.8868"> Link to Paper </a> and 
 <a href="https://cran.r-project.org/web/packages/DesignCTPB/index.html"> Software package </a>   </li>  <!-- <em>(<small> The first author is an intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em>  -->
 	
 </ol>	
