--- a/_pages/team.html
+++ b/_pages/team.html
@@ -35,10 +35,8 @@ Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hl
 	<li><strong>  Zhaoze Liu</strong>  2021.09 – Present<br>	
 	  Award 1: (2023.9-2024.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $11,500 </font> <br> -->
 </li>
-<!-- 	<li><strong>  Jinglan Qiu </strong>   2022.05 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)  <br>	 --> 
-<!--		  Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
-<!-- </li> -->
-		<li><strong>  Longwen Shang</strong> 2022.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	
+
+	<li><strong>  Longwen Shang</strong> 2022.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	
 	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
 	Award 2: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 		
 	</li>
@@ -50,7 +48,11 @@ Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hl
 	</li>
 	
 	
+<!-- 	<li><strong>  Jinglan Qiu </strong>   2022.05 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)  <br>	 --> 
+<!--		  Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
+<!-- </li> -->
 
+	
  <!--  		<li><strong>  Yupeng Zhao </strong>  2022.06 – Present<br>	  </li>  -->
 
  <!--    <li><strong>Hoi Suen Wong</strong>, 2018.9 – Present<br>  --> 
@@ -116,7 +118,6 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 
 <h4>PhD students</h4>
 	<li><strong>  Shuai You</strong> 2019.09 – 2024.03 (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic)<br>
- <!--	Internship:  <br>  -->
  Award: (2019.09) UVic Facuty of Graduate Studies Entrance Scholarship <br>   <!--,   <font color="blue">$5,000</font> -->
  Thesis: <em> Predictive modelling, Anomaly Detection, and Empirical Extraction of Variation Patterns within Longitudinal Data </em> <br> 
  First job: Postdoc Fellow, <a href="https://www.uwo.ca/index.html"> Western University</a>, Canada  <br> 
@@ -128,15 +129,10 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 
 <ul>
   <li><strong><a href="http://web.uvic.ca/~oalaqeli/omaralaqeeli.html"> Omar Alaqeeli</a></strong> 2018.10 – 2019.12<br>
-    <!--Assistant Professor, <a href="http://web.uvic.ca/~oalaqeli/omaralaqeeli.html">University of Texas at Arlington</a>, USA -->
 First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar-alaqeeli/"> AI Yamamah University</a>, Saudi Arabia </li>
-
-
-
 	  
   <li><strong> Elham Majd </strong> 2022.06 – 2023.06 <br>
   <!--First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar-alaqeeli/"> AI Yamamah University</a>, Saudi Arabia </li> -->
-
 </ul>
 	  
 	
@@ -168,37 +164,33 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	
 	<li><strong>  Xiaolin Huang</strong> 2022.06<br>
         Thesis: <em> Statistical Research on COVID-19 Response </em> <br>
- <!--	Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br> -->
 	Firest job: <a href="https://www.amazon.ca/"> Amazon </a>, Vancouver	
 	</li>
 
+	
 		<li><strong>  Xiangling Ji</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2022.07<br>	
 Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
- <!--   Award: (2019.9) UVic Entrance Scholarship,   <font color="blue">$5,000</font> <br> -->
  Thesis: <em>scAnnotate: An Automated Cell Type Annotation Tool for Single-cell RNA-Sequencing Data</em> <br> 
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>	
+
 	<li><strong>  Yichen Yan</strong> 2022.08<br>	  
   Award	1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship<br> <!--,   <font color="blue">$2,500</font> <br> -->
 Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
 First job: PhD student, Simon Fraser University </a>, Canada  <br> 
 	</li>	
+
 	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2022.08<br>	 
 Thesis: <em> Deep Learning Methods May Not Outperform Other Machine Learning Methods on Analyzing Genomic Studies</em> <br>
 		Award: (2021.09-2022.08) Biotalent SWPP <br>
 	</li>	
 
 	<li><strong>  Yang Guo</strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2021.07<br>
- <!--	Internship:  <br>  -->
 Thesis: <em>Learning COVID-19 network from literature databases using core decomposition</em> <br>
 Award 1: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
 Award 2: (2020.07) VADA Student Research Presentation Award <br> <!-- <font color="blue"> $19,000 </font> <br> -->				
 Internship: (2020.07-2020.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
 Work Study: (2020.09 - 2020.12) Centre for Biomedical Research, UVic  <br> 
-<!-- Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br> -->
 First job: Manager, <a href="https://www.scotiabank.com/ca/en/personal.html"> Scotiabank</a>, Canada  <br> 
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
 	<li><strong>  Yuying Huang</strong> 2021.08 <br> <!--(Co-supervisor <a href="https://www.uvic.ca/socialsciences/economics/faculty-staff/home/faculty-directory/xu-ke.php"> Dr. Ke Xu</a>, UVic) -->
@@ -208,40 +200,32 @@ Award 1: (2020.09-2021.08) VADA Trainee Scholarship (NSERC CREATE)<br> <!-- <fon
 Award 2: (2021.07) VADA Student Research Presentation Award <br> <!-- <font color="blue"> $19,000 </font> <br> -->		
 Internship: (2021.06-2021.08) Department of Mathematics and Statistics, University of Saskatchewan, Saskatoon   <br>	
 First job: PhD student, <a href="https://uwaterloo.ca/statistics-and-actuarial-science/"> University of Waterloo </a>, Canada  <br> 
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
 
 	
   <li><strong>  <a href="https://studentweb.uvic.ca/~thddhks1256/webpage.html"> Songwan Joun </a></strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) 2021.4<br>
-<!--	 Research Assistant: (2019.05 -2019.08) Department of Mathematics and Statistics, UVic <br>-->
 Thesis: <em>Multi-SNP prediction model for lung function decline</em> <br> 
 Award 1: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
 Internship: (2020.01-2020.06) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
 Award 2: (2020.07-2020.12) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
 First job: International Rice Research Institute  <br> 
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 	
  <li><strong>Qincheng Lu</strong> 2020.08<br>
- <!--	Internship:  <br>  -->
 Award: (2018.09-2019.08) MITACS Globalink Graduate Fellowship  <br> <!-- <font color="blue"> $15,000 </font> <br> -->
 Thesis: <em>A Novel Method for Differential Expression Analysis of Single Cell RNA-seq Data</em> <br> 
 First job: PhD student, <a href="https://www.cs.mcgill.ca/"> McGill University</a>, Canada  <br> 
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
- <li><strong>Ailan Shi</strong> 2019.06 <br>
+
+	<li><strong>Ailan Shi</strong> 2019.06 <br>
 MSc Degree Project: <em>Aggregating Multiple Genomic Studies Using Ensemble Data Analysis</em>   <br>
 Internship: (2018.05-2018.08) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
     Award: (2018.09-2019.06) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
 	First job: <a href="https://www.lalamove.com/"> LalaMove</a> (货拉拉), Shenzhen China
- <br>
-	<!-- (Co-supervisor <a href="http://www.providenceresearch.ca/researcher/don-sin"> Dr. Don Sin </a> and Dr. Maen Obeidat, University of British Columbia) -->
+ <br>  </li>
 
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
-  <li><strong>Peijie Xie</strong> 2019.05 <br>
+	<li><strong>Peijie Xie</strong> 2019.05 <br>
 MSc Degree Project: <em>An R package for Multi-Task Prediction</em> <br> 	
 Work Study: (2017.09 - 2018.04) Centre for Biomedical Research, UVic  <br>
 Internship:  (2018.05 - 2018.12)   <a href="https://www.bci.ca/"> British Columbia Investment Management Corporation </a>, Victoria <br>
@@ -264,65 +248,41 @@ Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
 
 	<h4>Undergraduate Students</h4>
 <ul>
-<li><strong>  Jason Thomo (UVic) </strong>, 2024.05 – 2025.04 <br>  Research Assistant </li> 	
-
-<li><strong>  Andy Chen (University of British Columbia) </strong>, 2024.06 – 2024.8<br> Summer research intern  </li> 		
-
-<li><strong>  Houshi He </strong>, 2023.08 – 2023.10<br>   
-Award: (2023.08-2021.10) MITACS Globalink Research Internship <br>
-</li>	
-<li><strong>  Yanjun Guo </strong>, 2023.08 – 2023.10<br>  
-Award: (2023.08-2021.10) MITACS Globalink Research Internship <br>
-</li>	
-
-<li><strong>  Danielle Tsao (UVic) </strong> 2021.05 – 2023.08<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+<li><strong>  Jason Thomo (UVic) </strong>  Research Assistant, 2024.05 – 2025.04 <br> </li> 	
+<li><strong>  Andy Chen (University of British Columbia) </strong> Summer research intern, 2024.06 – 2024.8<br>  </li> 		
+<li><strong>  Houshi He </strong> Summer research intern, 2023.08 – 2023.10<br>   
+Award: (2023.08-2021.10) MITACS Globalink Research Internship <br> </li>	
+<li><strong>  Yanjun Guo </strong> Summer research intern, 2023.08 – 2023.10<br>  
+Award: (2023.08-2021.10) MITACS Globalink Research Internship <br> </li>	
+<li><strong>  Danielle Tsao (UVic) </strong> Research Assistant, 2021.05 – 2023.08<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award 1: (2021.05-2021.08) NSERC Undergraduate Student Research Awards <br>
 Award 2: (2021.09-2022.04) Biotalent SWPP <br>
 Award 3: (2022.05) Best Posters Awards of the CSSC Conference  - 1st prize <br>		
 Award 4: (2022.05-2022.08) UVic Science Emerging Researcher Award (SERA) <br>	
 Award 5: (2022.08) UVic Jamie Cassels Undergraduate Research Awards <br>	
 Award 6: (2022.10-2023.01) MATICS Accelerate Fellowship <br>
- <!--   Honer Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- First job: PhD Student, University of Washington  <br> 
+First job: PhD Student, University of Washington  <br> 
   </li>
 <li><strong>  Christine Wong Chong (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.08<br>   </li>
 <li><strong>  Markus Swoveland (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.08<br>   </li>	
-
-	<li><strong>  Aman Monga (UVic) </strong> Full-time internship @ CFIA, 2022.05 – 2022.12<br>   </li>
-	<li><strong>  Xuhui Wang (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
-
-	<li><strong>  Sen Mu (Tongji University) </strong> 2022.07 – 2022.11<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
-Award: (2022.07-2022.11) MITACS Globalink Research Internship <br>
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
-
-	<li><strong>  Liuyi Lan (Beijing Normal University) </strong> 2022.07 – 2022.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
-Award: (2022.07 – 2022.10) MITACS Globalink Research Internship <br>
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- 	 </li>
-	<li><strong>  Morgan Magee (UVic) </strong> Full-time internship (co-sponsored by BioTalent Career Starter Program), 2022.06 – 2022.08<br>   </li>
-	<li><strong>  Shanshan Xue (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
-	<li><strong>  Blake Smith (UVic) </strong> Summer internship @ CFIA, 2022.05 – 2022.09<br>   </li>
+<li><strong>  Aman Monga (UVic) </strong> Full-time internship @ CFIA, 2022.05 – 2022.12<br>   </li>
+<li><strong>  Xuhui Wang (UVic) </strong> Summer research intern, 2022.05 – 2022.08<br>   </li>	
+<li><strong>  Sen Mu (Tongji University) </strong> Summer research intern 2022.07 – 2022.11<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+Award: (2022.07-2022.11) MITACS Globalink Research Internship <br>  </li>
+<li><strong>  Liuyi Lan (Beijing Normal University) </strong> Summer research intern2022.07 – 2022.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+Award: (2022.07 – 2022.10) MITACS Globalink Research Internship <br> 	 </li>
+<li><strong>  Morgan Magee (UVic) </strong> Full-time internship (co-sponsored by BioTalent Career Starter Program), 2022.06 – 2022.08<br>   </li>
+<li><strong>  Shanshan Xue (UVic) </strong> Summer research intern, 2022.05 – 2022.08<br>   </li>	
+<li><strong>  Blake Smith (UVic) </strong> Summer internship @ CFIA, 2022.05 – 2022.09<br>   </li>
 <!--	<li><strong>  Daniel Polson (UVic) </strong> Summer internship, 2022.06  <br>   </li> -->
-	<li><strong>  Lizhang Chen (Beijing Jiaotong University) </strong> 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
-Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
-	<li><strong>  Haijun Jia (Beihang University)</strong> 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
-Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>   
-	<li><strong>Yitao Lu (University of Science and Technology of China)</strong> Summer internship, 2019.07 – 2019.10 <br>  
-	   First job: PhD Student, School of Data Science,  <a href="https://scholars.cityu.edu.hk/en/persons/yitao-lu(2f2c7c44-8355-42e7-9de8-bf57068104e0).html"> City University of HongKong</a>, China  <br>
-</li>
-  <li><strong>Yushan Hu (Northwestern Polytechnical University)</strong> Summer internship, 2019.07 – 2019.10 <br>  
-	   First job: PhD student, <a href="https://www.uvic.ca/science/math-statistics/"> University of Victoria </a>, Canada  <br>
-</li>
-
+<li><strong>  Lizhang Chen (Beijing Jiaotong University) </strong> Summer research intern, 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+Award: (2021.07-2021.10) MITACS Globalink Research Internship <br> </li>
+<li><strong>  Haijun Jia (Beihang University)</strong> Summer research intern, 2021.07 – 2021.10<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+Award: (2021.07-2021.10) MITACS Globalink Research Internship <br>  </li>   
+<li><strong>Yitao Lu (University of Science and Technology of China)</strong> Summer research intern, 2019.07 – 2019.10 <br>  
+	   First job: PhD Student, School of Data Science,  <a href="https://scholars.cityu.edu.hk/en/persons/yitao-lu(2f2c7c44-8355-42e7-9de8-bf57068104e0).html"> City University of HongKong</a>, China  <br></li>
+<li><strong>Yushan Hu (Northwestern Polytechnical University)</strong> Summer research intern, 2019.07 – 2019.10 <br>  
+	   First job: PhD student, <a href="https://www.uvic.ca/science/math-statistics/"> University of Victoria </a>, Canada  <br> </li>
 </ul>
 	
 </ul>
