--- a/_pages/research.html
+++ b/_pages/research.html
@@ -8,29 +8,32 @@ author_profile: true
 <h2> Recently Published Papers </h2>
 Trainees are underlined, and the last/corresponding authors are denoted by *. The impact factor (when provided) is 2023. A full list of publications can be found on my <a href="https://scholar.google.ca/citations?user=5QsFxcAAAAAJ&hl=en"> Google Scholar </a> page.
 
+
+<h3> Single Cell Genomics</h3> 
+<ol>
+	<li>	<u>Kailun Bai</u>, Belaid Moa, Xiaojian Shao, <b>Xuekui Zhang</b>*. scSorterDL: A Deep Neural Network-Enhanced Ensemble LDAs for Single Cell Classifications. 2025, <em>Briefings in Bioinformatics</em> (Accepted)  </li>
+	<li>	Yao Dong, Chen Chen, Jin Shi, <u>Yushan Hu</u>, <u>Xiaowen Cao</u>, Yongfeng Dong and <b>Xuekui Zhang</b>*. MOH: a novel multilayer multi-omics heterogeneous graph for single-cell clustering. 2025, <em>IEEE Journal of Biomedical and Health Informatics</em>, 2025, (Accepted) <a href="https://doi.org/10.1109/JBHI.2025.3589464"> Link to Paper </a>  </li>  
+	<li>	<u>Chang Bi</u>, <u>Kailun Bai</u>, <b>Xuekui Zhang</b>*. HiCat: A Semi-Supervised Approach for Cell Type Annotation. 2025,  <em>Briefings in Bioinformatics</em>,  <a href="https://doi.org/10.1093/bib/bbaf428"> Link to Paper </a>   </li>
+	<li>	<u>Kailun Bai</u>, Belaid Moa, Xiaojian Shao, and <b>Xuekui Zhang</b>*.  PCLDA: An interpretable cell annotation tool for single-cell RNA-sequencing data based on simple statistical methods. 2025, <em>Computational and Structural Biotechnology Journal</em>, <a href="https://doi.org/10.1016/j.csbj.2025.07.019"> Link to Paper </a>  </li>
+	<li>	Yao Dong, Jiaxue Zhang, Jin Shi, <u>Yushan Hu</u>, <u>Xiaowen Cao</u>, Yongfeng Dong, and <b>Zhang X</b>*. scAGCI: an anchor graph-based method for cell clustering from integrated scRNA-seq and scATAC-seq data. 2025, <em>Briefings in Bioinformatics</em>,  <a href="https://doi.org/10.1093/bib/bbaf244"> Link to Paper </a> and <a href="https://github.com/hebutdy/scAGCI"> GitHub </a>  </li>
+	<li>	<u>Yushan Hu</u>, Xiaojian Shao, Li Xing, Xuan Li, Geoffrey M. Nonis, Graeme J. Koelwyn*, <b>Xuekui Zhang</b>*, Dong D. Sin*. Single Cell Sequencing of Lung Macrophages and Monocytes Reveals Novel Therapeutic Targets in COPD. 2023, <em>Cells</em>   <a href="https://doi.org/10.3390/cells12242771"> Link to Paper </a>  </li>
+	<li>	<u>Xiangling Ji X</u>, <u>Danielle Tsao</u>, <u>Kailun Bai K</u>, Min Tsao, Li Xing, and <b> Xuekui Zhang</b>*. scAnnotate: an automated cell type annotation tool for single-cell RNA-sequencing data. 2023, <em>Bioinformatics Advance</em>,  <a href="https://doi.org/10.1093/bioadv/vbad030"> Link to Paper </a> and <a href="https://cran.r-project.org/package=scAnnotate"> R package </a>  </li>
+</ol>	
+
+
 <h3> Statistics, Bioinformatics, and Biomedicine </h3> 
 <ol>	
+<Li>  	<u>Xiaowen Cao</u>, <u>Shuai You</u>, Grace Y. Yi, <b>Xuekui Zhang</b>*, Li Xing*. Concurrent Prediction of Multiple Survival Outcomes with a Refined Stacking Algorithm. 2025, <em>Journal of Computational and Graphical Statistics</em> (Accepted) </li>
 <Li>    Bie Y, <u>You S</u>, Li X, <b>Zhang X</b>* and Lu T, Essential Number of Principal Components and Nearly Training-Free Model for Spectral Analysis. 2024, <em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em>, (Impact factor 20.8) <a href="https://doi.org/10.1109/TPAMI.2024.3436860"> Link to Paper </a> </li>
 <Li>    <u>Ning H</u>, Boyes I, Numanagić I, Rott M*, Xing L*, <b>Zhang X</b>*. Diagnostics of viral infections using high-throughput genome sequencing data. 2024, <em>Briefings in Bioinformatics</em>   <a href="https://doi.org/10.1093/bib/bbae501"> Link to Paper </a> and <a href="https://cran.r-project.org/package=iimi"> R package </a>  </li>
 <li>	Luo W, Zhu Y, <b>Zhang X</b>, Lin L. A, Semi-parametric Estimation of Personalized Dose-response Function Using Instrumental Variables. 2024, <em>Journal of Machine Learning Research </em>, <a href="https://www.jmlr.org/papers/v25/21-1181.html"> Link to Paper </a> </li>
 <li>	<b>Zhang X</b>, <u>Huang X</u>, and Xing L. ADSP: An Adaptive Sample Pooling Strategy for Diagnostic Testing. 2023, <em>Journal of Biomedical Informatics</em>,  <a href="https://www.sciencedirect.com/science/article/pii/S1532046423002228"> Link to Paper </a>   </li>	
-<li>	<u>Li M</u>, Esfahani F, Xing L, <b>Zhang X</b>*.  Predicting the daily counts of COVID-19 infection using temporal convolutional networks. 2023, <em>Journal of Global Health</em> (impact factor 7.2), <a href="https://doi.org/10.7189/jogh.13.03029"> Link to Paper </a>  <em>(<small> The first author is an intern high-school student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
-<li>	<u>Ji X</u>, <u>Tsao D</u>, <u>Bai K</u>, Tsao M, Xing L, and <b>Zhang X</b>*. scAnnotate: an automated cell type annotation tool for single-cell RNA-sequencing data. 2023, <em>Bioinformatics Advance</em>,  <a href="https://doi.org/10.1093/bioadv/vbad030"> Link to Paper </a> and <a href="https://cran.r-project.org/package=scAnnotate"> R package </a>  </li>
 <li>  Cheng X, Liu Y, Wang J, Robertson G, <b>Zhang X</b>, Jones S, and Taubert S.  cSurvival: a web resource for biomarker interactions in cancer outcomes and in cell lines. 2022, <em> Briefings in Bioinformatics</em> (impact factor 9.5) <a href="10.1093/bib/bbac090"> Link to Paper </a>  </li>
-<li>   <u>Guo Y </u>, Esfahani F, Shao X, Srinivasan V, Thomo A, Xing L, <b>Zhang X</b>*. Integrative COVID-19 Biological Network Inference with Probabilistic Core Decomposition. 2021，<em> Briefings in Bioinformatics</em> (impact factor 9.5) <a href="https://academic.oup.com/bib/article/23/1/bbab455/6425808"> Link to Paper </a>  </li>		
-<li>   <u>Huang X </u>, Shao X, Xing L, <u>Hu Y</u>, Sin DD*, <b>Zhang X</b>*. The impact of lockdown timing on COVID-19 transmission across US counties. 2021， <em> EClinicalMedicine</em> (a journal published by the Lancet, impact factor 15.1) <a href="https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(21)00315-1/fulltext"> Link to Paper </a>  </li>
 <li>   Xing L, <b>Zhang X</b>, Burstyn I， Gustafson P. On logistic Box–Cox regression for flexibly estimating the shape and strength of exposure‐disease relationships. 2021，<em>Canadian Journal of Statistics</em>  <a href="https://onlinelibrary.wiley.com/doi/10.1002/cjs.11587"> Link to Paper </a>,  （<a href="https://ssc.ca/en/awards?field_award_year_value%5Bvalue%5D%5Byear%5D=&tid=1320"> <strong> Statistics Society of Canada 2022 CJS Award </strong> </a> ）</li>
 <li> Xing L, Lesperance ML, <b>Zhang X</b>*. Simultaneous prediction of multiple outcomes using revised stacking algorithms. 2020， <em>Bioinformatics</em> <a href="https://doi.org/10.1093/bioinformatics/btz531"> Link to Paper </a> and 
 <a href="https://cran.r-project.org/web/packages/MTPS/index.html"> Software package </a> </li>
-<!--	and <a href="https://github.com/ubcxzhang/MTPS"> GitHub </a> -->
-<!--<p><em> In many situations, we are interested in prediction of multiple outcomes. Compared with predicting each outcome individually, the prediction performance can be improved by simultaneously predicting all outcomes and allowing predictions to borrow information from different outcomes. There are many prediction methods developed for single outcome prediction, but most of them have/can not been extended into multi-outcome prediction version. Neural network is the major methods for multitask prediction problems. We proposed an novel algorithm that can construct complex multi-outcome prediction models using almost any single-outcome prediction methods as building blocks. Our novel algorithm is not only flexible, but also powerful. Using cross validation studies on data from HIV database, we show our method outperform multi-outcome neural network and other multi-task prediction methods in the literature.</em></p>
--->
-<li> <u>Xu Y</u>, Xing L, Su J, <b>Zhang X</b>*, Qiu W*. Model-based clustering for identifying disease-associated SNPs in case-control genome-wide association studies. 2019， <em>Scientific Reports</em> <a href="https://www.nature.com/articles/s41598-019-50229-6"> Link of Paper</a> and <a href="https://cran.r-project.org/web/packages/GWASbyCluster/index.html">  Software package </a> </li>
-	<!-- and <a href="https://github.com/ubcxzhang/GWASbyCluster"> GitHub</a> -->
-<!-- <p><em>Lack of power is an issue problem for many GWAS studies if the multiple testing problem is addressed using a standard FDR control approach. Increasing sample size is not practical in most situations, hence analysis method with better power is desired. Using simulation studies, we found the real FDR of data analysis is always smaller than nominated FDR. This is due to the failure of incorporating strong LDs (high correlations) among SNPs. We proposed a novel method using Bayesian hierarchical models (model based clustering), which joint model all SNPs to better control FDR and improve power of the analysis of GWAS.</em></p>
--->
-
 </ol>	
+
 
 <h3> Environmental Research </h3> 
 <ol>
@@ -58,6 +61,14 @@ Trainees are underlined, and the last/corresponding authors are denoted by *. Th
 <li> <b>Zhang X</b>, <u>Huang Y </u>, Xu K, Xing L. Novel Modelling Strategies for High-frequency Stock Trading Data. 2023，<em> Financial Innovation</em> (impact factor 8.4) <a href="https://doi.org/10.1186/s40854-022-00431-9"> Link to Paper </a> and <a href="https://github.com/ubcxzhang/Stock-Price-Prediction"> GitHub code </a>  </li>	
 <li>Xu K, Zheng X, Xing L, <b>Zhang X</b>. Stock Market Openness and Market Quality: Evidence from the Shanghai-Hong Kong Stock Connect Program. 2020， <em>Journal of Financial Research</em>	<a href="https://doi.org/10.1111/jfir.12210"> Link to Paper </a> </li>
 </ol>	
+
+<h3> COVID-19 Research </h3> 
+<ol>
+<li>   <u>Li M</u>, Esfahani F, Xing L, <b>Zhang X</b>*.  Predicting the daily counts of COVID-19 infection using temporal convolutional networks. 2023, <em>Journal of Global Health</em> (impact factor 7.2), <a href="https://doi.org/10.7189/jogh.13.03029"> Link to Paper </a>  <em>(<small> The first author is an intern high-school student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
+<li>   <u>Guo Y </u>, Esfahani F, Shao X, Srinivasan V, Thomo A, Xing L, <b>Zhang X</b>*. Integrative COVID-19 Biological Network Inference with Probabilistic Core Decomposition. 2021，<em> Briefings in Bioinformatics</em> (impact factor 9.5) <a href="https://academic.oup.com/bib/article/23/1/bbab455/6425808"> Link to Paper </a>  </li>		
+<li>   <u>Huang X </u>, Shao X, Xing L, <u>Hu Y</u>, Sin DD*, <b>Zhang X</b>*. The impact of lockdown timing on COVID-19 transmission across US counties. 2021， <em> EClinicalMedicine</em> (a journal published by the Lancet, impact factor 15.1) <a href="https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(21)00315-1/fulltext"> Link to Paper </a>  </li>
+</ol>	
+
 
 <h2>Software </h2>
 <p> <strong>scAnnotate</strong>: An Automated Cell Type Annotation Tool for Single-Cell RNA-Sequencing Data.   <a href="https://cran.r-project.org/web/packages/scAnnotate/index.html"> CRAN</a> </p>
