--- a/_pages/research.html
+++ b/_pages/research.html
@@ -46,8 +46,8 @@ Trainees are underlined, and the last/corresponding authors are denoted by *. Th
 
 <h3> Design of adaptive clinical trials </h3> 
 <ol>
-	<li>	Cong Chen, Mo Huang, <b>Xuekui Zhang</b>*. Adaptive Phase 2/3 Design with Dose Optimization. 2025 <em>Contemporary Clinical Trials </em> <a href="https://doi.org/10.1016/j.cct.2025.108048"> Link to Paper </a> </li> 
-	<li>	Cong Chen, Mo Huang, <b>Xuekui Zhang</b>*. Adjustment for Inconsistency in Adaptive Phase 2/3 Designs with Dose Optimization. 2025 <em>Pharmaceutical Statistics </em>  <a href="https://doi.org/10.1002/pst.70031"> Link to Paper </a> </li> 
+	<li>	Cong Chen, Mo Huang, <b>Xuekui Zhang</b>. Adaptive Phase 2/3 Design with Dose Optimization. 2025 <em>Contemporary Clinical Trials </em> <a href="https://doi.org/10.1016/j.cct.2025.108048"> Link to Paper </a> </li> 
+	<li>	Cong Chen, Mo Huang, <b>Xuekui Zhang</b>. Adjustment for Inconsistency in Adaptive Phase 2/3 Designs with Dose Optimization. 2025 <em>Pharmaceutical Statistics </em>  <a href="https://doi.org/10.1002/pst.70031"> Link to Paper </a> </li> 
 	<li>	Cong Chen, Linda Sun, <b>Xuekui Zhang</b>.  A promising biomarker adaptive Phase 2/3 design – explained and expanded. 2023, <em>Contemporary Clinical Trials Communications</em>  <a href="https://doi.org/10.1016/j.conctc.2023.101229"> Link to Paper </a> </li> 
 <li>	Cong Chen, and <b>Xuekui Zhang</b>. From bench to bedside, 2-in-1 design expedites phase 2/3 oncology drug development. 2023, <em>Frontiers in Oncology</em>,  <a href="https://doi.org/10.3389/fonc.2023.1251672"> Link to Paper </a> </li> 
 <li>	<b>Xuekui Zhang</b>, <u>Haijun Jia</u>, Li Xing, and Cong Chen. Application of group sequential methods to the 2-in-1 design and its extensions for interim monitoring. 2023, <em>Statistics in Biopharmaceutical Research</em>,  <a href="https://www.tandfonline.com/eprint/MBTZAZGJUFAHDMW3M7RV/full?target=10.1080/19466315.2023.2197402"> Link to Paper </a> </li>
