--- a/_pages/team.html
+++ b/_pages/team.html
@@ -10,26 +10,6 @@ author_profile: true
 <h4>PhD Students</h4>
 <ul>
 	
-	<li><strong>  Kailun Bai</strong> 2020.09 – Present	(Co-supervisor Dr. Xiaojian Shao, National Research Council Canada) <br>
-	 <!--	Internship:  <br>  -->
-  Award 1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
-  Award 2: (2022.9-2024.2) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $30,500 </font> <br> -->
-  Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 
-		<!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-	</li>
-	
-	<li><strong>  Yushan Hu</strong> 2021.09 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)<br>
- <!--	Internship:  <br>  -->
-Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $42,000 </font> <br> -->
-Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <be>
-Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 		
-<!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
-<!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-<!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
-
 	<li><strong>  Chang Bi</strong>  2021.09 – Present (Co-supervisor <a href="https://www.uvic.ca/research/centres/arc/people/adjunct-members/fabbro-sebastien.php"> Dr. Sebastien Fabbro</a>, NRC)<br>
   </li>	
 	<li><strong>  Zhaoze Liu</strong>  2021.09 – Present<br>	
@@ -42,7 +22,7 @@ Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hl
 	</li>
 	<li><strong>  Shiyu Xu</strong>  2022.09 – Present<br>	 
 	Internship: (2023.5-2023.12) VERACYTE </li>
-	<li><strong>  Haochen Ning</strong>  2023.09 – Present<br>	  </li>	
+<!--	<li><strong>  Haochen Ning</strong>  2023.09 – Present<br>	  </li>	 -->
 	<li><strong>  Qianyun Zhao</strong>  2023.09 – Present<br>	 
 	Award 1: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 
 	</li>
@@ -117,6 +97,26 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 <h3><strong>Alumni</strong><br></h3>
 
 <h4>PhD students</h4>
+	<li><strong>  Kailun Bai</strong> 2020.09 – 2025.12	(Co-supervisor Dr. Xiaojian Shao, National Research Council Canada) <br>
+	 <!--	Internship:  <br>  -->
+  Award 1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
+  Award 2: (2022.9-2024.2) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $30,500 </font> <br> -->
+  Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 
+		<!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+	</li>
+	
+	<li><strong>  Yushan Hu</strong> 2021.09 – 2025.12 <br>
+ <!--	Internship:  <br>  -->
+Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $42,000 </font> <br> -->
+Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <be>
+Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 		
+<!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+<!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+<!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+
 	<li><strong>  Shuai You</strong> 2019.09 – 2024.03 (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic)<br>
  Award: (2019.09) UVic Facuty of Graduate Studies Entrance Scholarship <br>   <!--,   <font color="blue">$5,000</font> -->
  Thesis: <em> Predictive modelling, Anomaly Detection, and Empirical Extraction of Variation Patterns within Longitudinal Data </em> <br> 
