Update team member listings and roles
Restored and updated staff and student listings, including adding Shelly Gao and adjusting dates for Bryce Davidson.

--- a/_pages/team.html
+++ b/_pages/team.html
@@ -66,11 +66,11 @@ author_profile: true
 </ul>
 
 
-<h4>Staff/Programmer</h4>
+<!-- <h4>Staff/Programmer</h4>
 
 <ul>
   <li><strong> Shelly Gao </strong> 2022.06 – 2025.12 <br>
-</ul>
+</ul> -->
 
   <!--
 <h4>Postdoctorate Fellows and Research Associates</h4>
@@ -83,16 +83,16 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 
 <h4>Long-term Visitors</h4>
 <ul>
-	<li><strong>  <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Li Xing</a> </strong> (Assistant Professor, University of Saskatchewan, Canada), 2021.01 – Present<br>	
+	<!-- <li><strong>  <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Li Xing</a> </strong> (Assistant Professor, University of Saskatchewan, Canada), 2021.01 – Present<br>	 -->
 	<li><strong>  Lina Li </strong> (PhD student, University of Saskatchewan, Canada), 2023.08 – Present<br>	
 </ul>
 
 
 
-<h4>Undergraduate Students</h4> 
+<!-- <h4>Undergraduate Students</h4> 
 <ul> 
-<li><strong>  Bryce Davidson (UVic) </strong>, 2024.05 – current <br>  Full-time intern </li> 
-</ul>
+<li><strong>  Bryce Davidson (UVic) </strong>, 2024.05 – 2025.09 <br>  Full-time intern </li> 
+</ul> -->
 	
 <h3><strong>Alumni</strong><br></h3>
 
@@ -246,8 +246,16 @@ Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
 
 </ul>
 
+<h4>Staff/Programmer</h4>
+
+<ul>
+  <li><strong> Shelly Gao </strong> 2022.06 – 2025.12 <br>
+</ul>
+
+
 	<h4>Undergraduate Students</h4>
 <ul>
+<li><strong>  Bryce Davidson (UVic) </strong>, 2024.05 – 2025.09 <br>  Full-time intern </li> 
 <li><strong>  Jason Thomo (UVic) </strong>  Research Assistant, 2024.05 – 2025.04 <br> </li> 	
 <li><strong>  Andy Chen (University of British Columbia) </strong> Summer research intern, 2024.06 – 2024.8<br>  </li> 		
 <li><strong>  Houshi He </strong> Summer research intern, 2023.08 – 2023.10<br>   
