--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,6 +6,7 @@ author_profile: true
 ---
 		  <h3><strong>Regular Courses</strong></h3>	  
 <ul>
+<li>Spring 2025: STAT 469/556 &nbsp; Machine Learning </li> 
 <li>Fall 2023: STAT 469/556 &nbsp; Machine Learning </li> 
 <li>Fall 2022: STAT 469/556 &nbsp; Machine Learning </li> 
 <li>Spring 2021: STAT 454/563 &nbsp; Machine Learning </li> 
