Add new research publications to the page

--- a/_pages/research.html
+++ b/_pages/research.html
@@ -23,6 +23,7 @@ Trainees are underlined, and the last/corresponding authors are denoted by *. Th
 
 <h3> Statistics, Bioinformatics, and Biomedicine </h3> 
 <ol>	
+<Li>  	<b>Xuekui Zhang</b>*, Li Xing*， <u>Jing Zhang</u>, <u>Kim Soojeong</u> . Beyond Conventional P-Values: Addressing Statistical Challenges in Big Data. 2025, <em>Communications in Statistics - Simulation and Computation</em>  <a href="https://doi.org/10.1080/03610918.2025.2593940"> Link to Paper </a>  </li>
 <Li>  	<u>Xiaowen Cao</u>, <u>Shuai You</u>, Grace Y. Yi, <b>Xuekui Zhang</b>*, Li Xing*. Concurrent Prediction of Multiple Survival Outcomes with a Refined Stacking Algorithm. 2025, <em>Journal of Computational and Graphical Statistics</em>  <a href="https://doi.org/10.1080/10618600.2025.2561900"> Link to Paper </a>  </li>
 <Li>    Bie Y, <u>You S</u>, Li X, <b>Zhang X</b>* and Lu T*, Essential Number of Principal Components and Nearly Training-Free Model for Spectral Analysis. 2024, <em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em>, (Impact factor 20.8) <a href="https://doi.org/10.1109/TPAMI.2024.3436860"> Link to Paper </a> </li>
 <Li>    <u>Ning H</u>, Boyes I, Numanagić I, Rott M*, Xing L*, <b>Zhang X</b>*. Diagnostics of viral infections using high-throughput genome sequencing data. 2024, <em>Briefings in Bioinformatics</em>   <a href="https://doi.org/10.1093/bib/bbae501"> Link to Paper </a> and <a href="https://cran.r-project.org/package=iimi"> R package </a>  </li>
